// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`component-test.vue > check the output of our component in different given states > renders stateInvalid correctly 1`] = `
"<div id="test-wrapper">
  <div class="text-red-500">
    <div>State message: invalid</div>
  </div>
</div>"
`;

exports[`component-test.vue > check the output of our component in different given states > renders stateValid correctly 1`] = `
"<div id="test-wrapper">
  <div class="text-green-500">
    <div>State message: valid</div>
  </div>
</div>"
`;
